Fixes vertical alignment of run profile in pipelines, and tags in tags modal

--- a/cdap-ui/app/cdap/components/PipelineDetails/RunLevelInfo/RunComputeProfile/RunComputeProfile.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/RunLevelInfo/RunComputeProfile/RunComputeProfile.scss
@@ -27,6 +27,7 @@
       user-select: none;
       display: flex;
       justify-content: center;
+      height: 18px;
 
       > div {
         display: flex;
@@ -44,6 +45,7 @@
       .icon-svg {
         margin-right: 5px;
         vertical-align: top;
+        height: 100%;
       }
     }
     .profile-preview-popover {
