--- a/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
+++ b/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
@@ -136,6 +136,7 @@ $hightlight-color: #7f8c8d;
           color: white;
           border-radius: 3px;
           cursor: pointer;
+          line-height: 13px;
         }
 
         &:hover {
